# sm

./: .gitignore  a.py  analysis.ipynb  deepwiki.py  evals.py  main.py  pretrain.py  pyproject.toml  run.sh  scraping.py  test.py  upload_model.py
recall_out/: aggregate.json  file_completion_outputs.json  file_completion_results.csv  file_completion_results.json  masked_completion_outputs.json  masked_completion_results.csv  masked_completion_results.json
recall_out_debug/: aggregate.json  file_completion_outputs.json  file_completion_results.csv  file_completion_results.json  masked_completion_outputs.json  masked_completion_results.csv  masked_completion_results.json
recall_out_debug14/: aggregate.json  file_completion_outputs.json  file_completion_results.csv  file_completion_results.json  masked_completion_outputs.json  masked_completion_results.csv  masked_completion_results.json
