[project]
name = "archit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "transformers>=4.56.0",
    "accelerate>=0.28.0",
    "triton>=3.4.0",
    "trl>=0.22.1",
    "verifiers>=0.1.3",
    "huggingface-hub>=0.34.4",
    "wandb>=0.21.3",
    "flash-attn>=2.8.3",
    "dotenv>=0.9.9",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.5.1",
]
